# LogosFortuna

./: README.md  install-macos.sh  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md
.github/agents/: anlama-ajansi.agent.md  dogrulama-ajansi.agent.md  logosfortuna-udiv.agent.md  ogrenme-ajansi.agent.md  uygulama-ajansi.agent.md
.github/prompts/: lf-anla.prompt.md  lf-dogrula.prompt.md  lf.prompt.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
agents/: anlama-ajansi.agent.md  anlama-ajansi.md  dil-ajansi.agent.md  dogrulama-ajansi.agent.md  dogrulama-ajansi.md  entegrasyon-ajansi.agent.md  guvenlik-ajansi.agent.md  kalite-ajansi.agent.md  kirik-ajansi.agent.md  ogrenme-ajansi.agent.md  ogrenme-ajansi.md  skill-classifier-ajansi.agent.md  ux-ajansi.agent.md  uygulama-ajansi.agent.md  uygulama-ajansi.md
commands/: lf-anla.md  lf-dogrula.md  lf-rapor.md  lf-update.md  lf.md
hooks/: hooks.json
logosfortuna/: __init__.py  __main__.py  _module_loader.py  integration.py  quality.py  security.py  udiv.py
logosfortuna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: __init__.py  entegrasyon-sistemi.py  entegrasyon_sistemi.py  guvenlik-tarayici.py  guvenlik_tarayici.py  kod-kalitesi-analizoru.py  kod_kalitesi_analizoru.py  telemetry-writer.py
tests/: conftest.py  test_cache_manager.py  test_cli.py  test_coklu_dil.py  test_customizations.py  test_entegrasyon.py  test_guvenlik_tarayici.py  test_kod_kalitesi.py  test_udiv.py
(+25 files in other folders)
